@@ -2,6 +2,8 @@ enum {
     CLASS_SECTION = 0,
     SOURCE_SECTION,
     CAMODE_SECTION,
+    DEVICE_SECTION,
+    FLASH_SECTION,
     CONFIG_SECTION,
     CUSTOM_SECTION,
     SYMBOL_SECTION,
@@ -13,6 +15,8 @@ static NSString* const section_titles[] = {
     @"Classes",
     @"SourceType",
     @"CameraMode",
+    @"CaptureDevice",
+    @"CameraFlashMode",
     @"Reader Configuration",
     nil,
     @"Enabled Symbologies",
@@ -326,6 +330,33 @@ static const CGFloat const zoom_choices[] = {
                   checked: (reader.cameraMode == i)]];
     [sections replaceObjectAtIndex: CAMODE_SECTION
               withObject: modes];
+
+    static NSString *const deviceNames[] = {
+        @"Rear", @"Front", nil
+    };
+    NSMutableArray *devices = [NSMutableArray array];
+    for(int i = 0; deviceNames[i]; i++)
+        if([[reader class]
+               isCameraDeviceAvailable: i])
+            [devices addObject:
+                [self cellWithTitle: deviceNames[i]
+                      tag: i
+                      checked: (reader.cameraDevice == i)]];
+    assert(devices.count);
+    [sections replaceObjectAtIndex: DEVICE_SECTION
+              withObject: devices];
+
+    static NSString *const flashNames[] = {
+        @"Off", @"Auto", @"On", nil
+    };
+    NSMutableArray *flashModes = [NSMutableArray array];
+    for(int i = 0; flashNames[i]; i++)
+        [flashModes addObject:
+            [self cellWithTitle: flashNames[i]
+                  tag: i - 1
+                  checked: (reader.cameraFlashMode == i - 1)]];
+    [sections replaceObjectAtIndex: FLASH_SECTION
+              withObject: flashModes];
 
     static NSString* const configNames[] = {
         @"showsCameraControls", @"showsZBarControls", @"tracksSymbols",
@@ -730,6 +761,18 @@ static const CGFloat const zoom_choices[] = {
         }
         [self setCheckForTag: reader.cameraMode
               inSection: CAMODE_SECTION];
+        break;
+
+    case DEVICE_SECTION:
+        reader.cameraDevice = cell.tag;
+        [self setCheckForTag: reader.cameraDevice
+              inSection: DEVICE_SECTION];
+        break;
+
+    case FLASH_SECTION:
+        reader.cameraFlashMode = cell.tag;
+        [self setCheckForTag: reader.cameraFlashMode
+              inSection: FLASH_SECTION];
         break;
 
     case CONFIG_SECTION: {
